Add Timespan for record data

--- a/WindowsFormsSample/App.config
+++ b/WindowsFormsSample/App.config
@@ -1,9 +1,52 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=AUTOMATE\AUTOMATESQL;Initial Catalog=AutomateBusiness;Integrated Security=True" providerName="System.Data.SqlClient" />
-  </connectionStrings>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
-    </startup>
+  <configSections>
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WindowsFormsSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="WindowsFormsSample.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    </sectionGroup>
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2"/>
+  </startup>
+  <userSettings>
+    <WindowsFormsSample.Properties.Settings>
+      <setting name="CompanyName" serializeAs="String">
+        <value>Tanjai Delivery</value>
+      </setting>
+      <setting name="MachineName" serializeAs="String">
+        <value>ME-2001-2993</value>
+      </setting>
+      <setting name="RunningTimes" serializeAs="String">
+        <value>00:00:00</value>
+      </setting>
+      <setting name="DownTimes" serializeAs="String">
+        <value>00:00:00</value>
+      </setting>
+      <setting name="SettingTimes" serializeAs="String">
+        <value>00:00:00</value>
+      </setting>
+      <setting name="StartTime" serializeAs="String">
+        <value>08:00:00</value>
+      </setting>
+      <setting name="EndTime" serializeAs="String">
+        <value>18.00:00:00</value>
+      </setting>
+    </WindowsFormsSample.Properties.Settings>
+  </userSettings>
+  <applicationSettings>
+    <WindowsFormsSample.Properties.Settings>
+      <setting name="AddressHubs" serializeAs="String">
+        <value>https://localhost:44377/ChatHub</value>
+      </setting>
+      <setting name="AdminName" serializeAs="String">
+        <value>mhor.fibo7@gmail.com</value>
+      </setting>
+      <setting name="AdminPassword" serializeAs="String">
+        <value>Mhor.fibo7</value>
+      </setting>
+    </WindowsFormsSample.Properties.Settings>
+  </applicationSettings>
 </configuration>
