Add Message to chat with supervisor

--- a/WindowsFormsSample/App.config
+++ b/WindowsFormsSample/App.config
@@ -34,6 +34,9 @@
       <setting name="EndTime" serializeAs="String">
         <value>18.00:00:00</value>
       </setting>
+      <setting name="SupervisorEmail" serializeAs="String">
+        <value>mhor.fibo7@gmail.com</value>
+      </setting>
     </WindowsFormsSample.Properties.Settings>
   </userSettings>
   <applicationSettings>
@@ -42,10 +45,10 @@
         <value>https://localhost:44377/ChatHub</value>
       </setting>
       <setting name="AdminName" serializeAs="String">
-        <value>mhor.fibo7@gmail.com</value>
+        <value>machineLogin</value>
       </setting>
       <setting name="AdminPassword" serializeAs="String">
-        <value>Mhor.fibo7</value>
+        <value>machineLogin</value>
       </setting>
     </WindowsFormsSample.Properties.Settings>
   </applicationSettings>
