Add message page

--- a/WindowsFormsSample/App.config
+++ b/WindowsFormsSample/App.config
@@ -45,10 +45,10 @@
         <value>https://localhost:44377/ChatHub</value>
       </setting>
       <setting name="AdminName" serializeAs="String">
-        <value>machineLogin</value>
+        <value>mhor.fibo7@gmail.com</value>
       </setting>
       <setting name="AdminPassword" serializeAs="String">
-        <value>machineLogin</value>
+        <value>Mhor.fibo7</value>
       </setting>
     </WindowsFormsSample.Properties.Settings>
   </applicationSettings>
